--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -142,11 +142,11 @@
                     <label class="label-2" style="margin-right: 37%;">โทรศัพท์</label>
                 </li>
                 <li>
-                    <input type="text" id="txtTel" name="field2" class="field-divided textbox-size100" placeholder="" disabled />
+                    <input type="text" id="txtTel" name="field2" class="field-divided textbox-size100" placeholder="" style="margin-top: 6px;" disabled />
                 </li>
                 <li>
                     <label class="label-2" style="margin-right: 37%;">แฟกซ์</label>
-                    <input type="text" name="field1" id="txtFax" class="field-divided textbox-size100" placeholder="" disabled />
+                    <input type="text" name="field1" id="txtFax" class="field-divided textbox-size100" placeholder="" style="margin-top: 7px;" disabled />
                 </li>
                 <li>
                     <label class="label-2" style="margin-right: 29%;">บุคคลติดต่อ</label>&nbsp;<label class="label-2" style="margin-right: 2%;">ผู้ประสานงาน</label>
@@ -156,7 +156,7 @@
                     @*<input type="text" id="txtContact" name="field1" class="field-divided" placeholder="" disabled />&nbsp;<input type="text" name="field2" id="txtCoWorker" class="field-divided" placeholder="" disabled />*@
                 </li>
                 <li>
-                    <label class="label-2">ที่อยู่</label>
+                    <label class="label-2" style="margin-right: 50%; margin-top: 5px;">ที่อยู่</label>
                 </li>
                 <li>
                     <textarea name="field5" id="txtAddress" class="field-long field-textarea" placeholder="" disabled></textarea>
@@ -169,7 +169,7 @@
                    <input type="hidden" id="hidBDCID" />
                </li>
             </ul>
-            <ul class="form-style-1">
+            <ul class="form-style-1" style="max-width: 340px;">
                 <li>
                     <label class="label-7">Job Site</label>&nbsp;<label class="label-8">Job Location</label>
                 </li>
@@ -225,7 +225,7 @@
                                                                 <th>Qty</th>
                                                                 <th class="hidecolumn">PriceList</th>
                                                                 <th class="Price wraptext">Unit Price</th>
-                                                                <th class="Amount">Amount</th>
+                                                                <th class="Amountop">Amount</th>
                                                                 <th colspan="5"></th>
                                                             </tr>
                                                         </thead>
@@ -271,8 +271,7 @@
                                                                     <input type="text" id="txtPriceList" class="PriceList text-size50 textright" />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtUnitPrice" class="UnitPrice text-size100 textright" onchange="CalSum()" 
-                                                                           onblur="convertFloat('.UnitPrice')" />
+                                                                    <input type="text" id="txtUnitPrice" class="UnitPrice text-size100 textright" onchange="CalSum()" onblur="convertFloat('.UnitPrice',2)" />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtAmount" disabled class="Amount text-size120 txtdisablerow" onblur="convertFloat('.Amount',0)" />
@@ -312,7 +311,7 @@
                                                                     <input type="text" id="txtPriceList" class="PriceList text-size80 textright" />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtUnitPrice" class="UnitPrice text-size100 textright" onchange="CalSum()" onblur="convertFloat('.UnitPrice')" />
+                                                                    <input type="text" id="txtUnitPrice" class="UnitPrice text-size100 textright" onchange="CalSum()" onblur="convertFloat('.UnitPrice',2)" />
                                                                 </td>
                                                                 <td>
                                                                     <input type="text" id="txtAmount" disabled class="Amount text-size120 txtdisablerow" onblur="convertFloat('.Amount',0)">
@@ -355,7 +354,7 @@
                                                                 <th>Qty</th>
                                                                 <th class="hidecolumn">PriceList</th>
                                                                 <th class="Price wraptext">Unit Price</th>
-                                                                <th class="Amount1">Amount</th>
+                                                                <th class="Amountop">Amount</th>
                                                                 <th colspan="5"></th>
                                                             </tr>
                                                         </thead>
@@ -667,12 +666,12 @@
                                                 <table>
                                                     <tr>
                                                         <td>
-                                                            <ul class="form-style-1">
+                                                            <ul class="form-style-1" style="display:none;">
                                                                 <li>
-                                                                    <label class="label-small-5">Sup</label>&nbsp;<label class="label-small-5">F/M</label>&nbsp;<label class="label-small-5">Tech</label>&nbsp;<label class="label-small-5">Safety</label>
+                                                                    <label class="label-small-5" style="display:none;">Sup</label>&nbsp;<label class="label-small-5" style="display:none;">F/M</label>&nbsp;<label class="label-small-5" style="display:none;">Tech</label>&nbsp;<label class="label-small-5" style="display:none;">Safety</label>
                                                                 </li>
                                                                 <li>
-                                                                    <input type="text" id="txtManSup" name="ManSup" class="ManSup text-size80 textleft" placeholder="Sup" />&nbsp;<input type="text" id="txtManFM" name="ManFM" class="ManFM text-size80 textleft" placeholder="F/M" />&nbsp;<input type="text" id="txtManTech" name="ManTech" class="ManTech text-size80 textleft" placeholder="Tech" />&nbsp;<input type="text" id="txtManSafety" name="ManSafety" class="ManSafety field-select-small" placeholder="Safety" />
+                                                                    <input type="text" id="txtManSup" name="ManSup" style="display:none;" class="ManSup text-size80 textleft" placeholder="Sup" />&nbsp;<input type="text" style="display:none;" id="txtManFM" name="ManFM" class="ManFM text-size80 textleft" placeholder="F/M" />&nbsp;<input type="text" style="display:none;" id="txtManTech" name="ManTech" class="ManTech text-size80 textleft" placeholder="Tech" />&nbsp;<input type="text" style="display:none;" id="txtManSafety" name="ManSafety" class="ManSafety field-select-small" placeholder="Safety" />
                                                                 </li>
                                                             </ul>
                                                         </td>
@@ -742,7 +741,7 @@
                                                                 <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount2 text-size120 textright" onblur="convertFloat('.Amount2',0)">
+                                                                <input type="text" id="txtAmount" class="Amount2 text-size120 textright" onblur="convertFloat('.Amount2',4)">
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -765,7 +764,7 @@
                                                                 <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size180 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount2 text-size120 textright" onblur="convertFloat('.Amount2',0)" >
+                                                                <input type="text" id="txtAmount" class="Amount2 text-size120 textright" onblur="convertFloat('.Amount2',4)" >
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -776,7 +775,7 @@
                                                         </tr>
                                                     </tbody>
                                                 </table>
-                                                <a id="add-row3" href="#">+ Add Row</a>
+                                                <a id="add-row3" href="#" onblur="SetRowIndex()">+ Add Row</a>
                                                 @*<button id="add-row3" class="btn btn-primary">Add Row</button>*@
                                             </div>
                                             <p></p>
@@ -816,7 +815,7 @@
                                                                 <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount3 text-size120 textright" onblur="convertFloat('.Amount3',0)" />
+                                                                <input type="text" id="txtAmount" class="Amount3 text-size120 textright" onblur="convertFloat('.Amount3',5)" />
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -842,7 +841,7 @@
                                                                 <input type="text" id="txtSaleOrderNo" class="SaleOrderNo text-size165 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount3 text-size120 textright" onblur="convertFloat('.Amount3',0)">
+                                                                <input type="text" id="txtAmount" class="Amount3 text-size120 textright" onblur="convertFloat('.Amount3',5)">
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -853,7 +852,7 @@
                                                         </tr>
                                                     </tbody>
                                                 </table>
-                                                <a id="add-row4" href="#">+ Add Row</a>
+                                                <a id="add-row4" href="#" onblur="SetRowIndex()">+ Add Row</a>
                                                 @*<button id="add-row4" class="btn btn-primary">Add Row</button>*@
                                             </div>
                                             <p></p>
@@ -893,7 +892,7 @@
                                                                 <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount4 text-size120 textright" onblur="convertFloat('.Amount4',0)" />
+                                                                <input type="text" id="txtAmount" class="Amount4 text-size120 textright" onblur="convertFloat('.Amount4',6)" />
                                                             </td>
                                                             <td>
                                                                 <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
@@ -919,7 +918,7 @@
                                                                 <input type="text" id="txtInvoiceNo" class="InvoiceNo text-size165 textleft">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="txtAmount" class="Amount4 text-size120 textright" onblur="convertFloat('.Amount4',0)" />
+                                                                <input type="text" id="txtAmount" class="Amount4 text-size120 textright" onblur="convertFloat('.Amount4',6)" />
                                                             </td>
                                                             <td>
                                                                 <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
@@ -930,7 +929,7 @@
                                                         </tr>
                                                     </tbody>
                                                 </table>
-                                                <a id="add-row5" href="#">+ Add Row</a>
+                                                <a id="add-row5" href="#" onblur="SetRowIndex()">+ Add Row</a>
                                                 @*<button id="add-row5" class="btn btn-primary">Add Row</button>*@
                                             </div>
                                             <p></p>
