--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                     <input type="checkbox" id="show-menu" role="button" class="Hidecheckbox">
                     
                         <ul id="menu" class="menuul">
-                            <li id="mnDashboard" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Dashboard", "ExpiredTechnician", "Technician")</div></div></li>
+                            <li id="mnDashboard" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Dashboard", "DashBoard", "Home")</div></div></li>
                             <li id="mnAdmin" class="menuli">
                                 <div class="menua">
                                     <div class="menutext">
