--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -132,16 +132,16 @@
                 <input type="hidden" id="hidJobID" />
             </li>
         </ul>
-        <ul class="form-style-1" style="max-width: 340px;">
+        <ul class="form-style-1" style="max-width: 330px;">
             <li>
                 <label class="label-7">Job Site</label>&nbsp;<label class="label-8">Job Location</label>
             </li>
-            <li>
+            <li style="margin-top: 2px;">
                 <input type="text" id="txtJobSite" name="field1" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtLocation" name="field1" class="field-divided" placeholder="" />
             </li>
             <li>
                 <label>หมายเหตุ</label>
-                <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
+                <textarea name="field5" id="txtRemark" class="field-long field-textarea" style="margin-top: 5px;"></textarea>
             </li>
         </ul>
         @*//===================================================================CSS w3school*@
