--- a/Alpha/AlphaMvc/Content/editable/addrowstyle.css
+++ b/Alpha/AlphaMvc/Content/editable/addrowstyle.css
@@ -527,6 +527,14 @@
     float: left;
     margin-right: 10%;
 }
+.form-style .label-small-7 {
+    margin: 0 0 3px 0;
+    padding: 0px;
+    display: block;
+    font-weight: bold;
+    float: left;
+    margin-right: 7%;
+}
 .form-style .label-small-4 {
     margin: 0 0 3px 0;
     padding: 0px;
