--- a/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
@@ -14,12 +14,12 @@
     <form>
         <ul class="form-style">
             <li>
-                <label>Expense Group<span class="required">*</span></label>&nbsp;<label>Detail<span class="required">*</span></label>
+                <label class="label-small-7">Expense Group</label>&nbsp;<label class="label-2">Detail<span class="required">*</span></label>
                 <select id="cmbTypeWorking" class="field-divided text-floatleft text-size120" required></select>&nbsp;<input type="text" id="txtDetail" class="field-divided" placeholder="" />
             </li>
             <li>
                 <label>Price List<span class="required">*</span></label>
-                <input type="text" id="txtPrice" class="field-divided text-floatleft text-size120 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />&nbsp;<label>Bath</label>
+                <input type="text" id="txtPrice" class="field-divided text-floatleft text-size120 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" onblur="convertFloat('#txtPrice')" />&nbsp;<label>Bath</label>
             </li>
             <li>
                 <label>Sequence<span class="required">*</span></label>
